examples/tasker_primitive_obsession/src/domain/errors/change_user_role_error.py
from building_blocks.domain.errors import DomainRuleViolationError


class ChangeUserRoleError(DomainRuleViolationError):
    pass
